--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="title_activity_main">movie-app</string>
     <string name="package_name">io.ionic.starter</string>
     <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="server_client_id">
+        785344539141-g44ha0j7cho1h1t7svpc7u4a7tkktot6.apps.googleusercontent.com
+    </string>
 </resources>
